# Terracube_Sentinel

./: .claudeignore  .dockerignore  .env.example  .gitignore  .gitmodules  AI_INGEST_TASK.md  ARCHITECTURE.md  CESIUM_3D_PLAN.md  CLAUDE_PROGRESS.md  CLAUDE_TASK.md  DATASETS.md  Dockerfile.dagster  ENHANCEMENT_PLAN.md  PALANTIR_PARITY.md  README.md  REVIEW_AND_IMPROVEMENTS.md  REVIEW_TASK.md  SENTINEL-REVIEW.md  SPI_INTERFACE_SUMMARY.md  UNIVERSAL_INGESTION_ARCHITECTURE.md  WORLDMONITOR_INGESTION_PLAN.md  docker-compose.dagster.yml  docker-compose.yml  e2e_test.py  init-db.sql
.playwright-mcp/: page-2026-04-11T06-46-23-716Z.yml  page-2026-04-11T06-47-33-654Z.yml
.trash/: e2e_test_v2.py
agents/: .dockerignore  Dockerfile  (+4 more)
dagster/: .dockerignore  dagster_dev.py  pyproject.toml  workspace.yaml
dagster/ai_ingest/: __init__.py  anomaly_detector.py  auto_mapper.py  config.py  entity_extractor.py  event_classifier.py  llm_client.py  quality_scorer.py  summarizer.py
dagster/pipelines/: __init__.py  ai_ingestion.py  air_quality.py  climate_reanalysis.py  infrastructure_vulnerability.py  real_time_hazards.py  risk_scoring.py  satellite_ingestion.py  social_signals.py
dagster/sources/: __init__.py  ais_adapter.py  aisstream_adapter.py  base_adapter.py  cache.py  celestrak_adapter.py  demographic_adapter.py  eq_adapter.py  finance_adapter.py  firms_adapter.py  fusion_pipeline.py  gfw_adapter.py  infrastructure_adapter.py  opensky_adapter.py  schemas.py  weather_adapter.py
dagster/terracube_sentinel_pipelines.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+93 files in other folders)
