[project]
name = "terracube-sentinel-pipelines"
version = "0.1.0"
description = "Dagster pipelines for TerraCube Sentinel geo-hazard monitoring"
requires-python = ">=3.11"
dependencies = [
    "dagster>=1.9,<2.0",
    "dagster-webserver>=1.9,<2.0",
    "dagster-postgres>=0.25,<1.0",
    "httpx>=0.27,<1.0",
    "shapely>=2.0,<3.0",
    "pystac>=1.11,<2.0",
    "pystac-client>=0.8,<1.0",
    "requests>=2.32,<3.0",
    "boto3>=1.35,<2.0",
    "redis>=5.0,<6.0",
    "pydantic>=2.0,<3.0",
    "websockets>=12.0,<17.0",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver>=1.9,<2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pipelines*", "sources*", "ai_ingest*"]

[tool.dagster]
module_name = "pipelines"
